--- a/production/production/FinalProjectFallTerm/MarioBros/gradle/wrapper/gradle-wrapper.properties
+++ b/production/production/FinalProjectFallTerm/MarioBros/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Jun 09 23:06:52 EDT 2017
+#Sun Jan 14 18:23:00 EST 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.14.1-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.3-rc-2-all.zip
